--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <div class='span8'>
       <div class="page-header">
+        <a href="<%= @song.id %>/edit">Edit</a>
         <h1>
           <%= @song.title %>
         </h1>
